--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -12,5 +12,45 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Velkommen til \nregionernes \nskadestueventeliste"
+        android:id="@+id/main_title_textView"
+        android:textAlignment="center"
+        android:layout_marginTop="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:textSize="30dp" />
+
+    <Button
+        android:layout_width="350dp"
+        android:layout_height="150dp"
+        android:text="Se din plads i køen"
+        android:id="@+id/main_submit_button"
+        android:layout_below="@+id/patientcode_inputField"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="49dp"
+        android:textSize="26dp"
+        android:background="#2196F3"
+        android:textColor="#FFFFFF" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/patientcode_inputField"
+        android:hint="Indtast din 6-cifret kode"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="280dp"
+        android:layout_height="80dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Indtast din udleverede 6-cifret \nkode for at se din plads i køen"
+        android:id="@+id/textView"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:layout_above="@+id/patientcode_inputField"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
