--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -7,7 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.f2016.dtu.androidventeliste.MainMenuActivity">
+    android:screenOrientation="portrait"
+    tools:context="com.f2016.dtu.androidventeliste.MainMenuActivity"
+    android:textAlignment="center">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,11 +18,12 @@
         android:text="Velkommen til \nregionernes \nskadestueventeliste"
         android:id="@+id/main_title_textView"
         android:textAlignment="center"
-        android:layout_marginTop="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:textStyle="bold"
-        android:textSize="30dp" />
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="20dp" />
 
     <Button
         android:layout_width="350dp"
@@ -30,7 +33,7 @@
         android:layout_below="@+id/patientcode_inputField"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp"
-        android:textSize="26dp"
+        android:textSize="26sp"
         android:background="#2196F3"
         android:textColor="#FFFFFF" />
 
@@ -40,7 +43,8 @@
         android:id="@+id/patientcode_inputField"
         android:hint="Indtast din 6-cifret kode"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:password="true" />
 
     <TextView
         android:layout_width="280dp"
@@ -48,7 +52,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Indtast din udleverede 6-cifret \nkode for at se din plads i køen"
         android:id="@+id/textView"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="#000000"
         android:layout_above="@+id/patientcode_inputField"
