17-03-2016 - Opdateret login fil navn

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:screenOrientation="portrait"
-    tools:context="com.f2016.dtu.androidventeliste.MainMenuActivity"
+    tools:context=".LoginActivity"
     android:textAlignment="center">
 
     <TextView
