--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,7 @@
             android:layout_height="match_parent"
             android:inputType="number"
             android:ems="10"
+            android:maxLength="1"
             android:id="@+id/loginNumberField1"
             android:layout_row="0"
             android:layout_column="0"
@@ -65,6 +66,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
+            android:maxLength="1"
             android:id="@+id/loginNumberField2"
             android:layout_row="0"
             android:layout_column="1"
@@ -75,6 +77,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
+            android:maxLength="1"
             android:id="@+id/loginNumberField3"
             android:layout_column="2"
             android:layout_row="0"
@@ -85,6 +88,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:ems="10"
+            android:maxLength="1"
             android:id="@+id/loginNumberField4"
             android:layout_column="3"
             android:layout_row="0"
@@ -95,6 +99,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:ems="10"
+            android:maxLength="1"
             android:id="@+id/loginNumberField5"
             android:layout_row="0"
             android:layout_column="4"
@@ -105,6 +110,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:ems="10"
+            android:maxLength="1"
             android:id="@+id/loginNumberField6"
             android:layout_row="0"
             android:layout_column="5"
