--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,16 @@
          android:layout_height="match_parent">
 
          <fragment
-             android:name="com.f2016.dtu.androidventeliste.VenteTidFragment"
+             android:name="com.f2016.dtu.androidventeliste.QueueExpandFragment"
              android:id="@+id/nrInQueue"
-             android:layout_weight="1"
+
              android:layout_width="match_parent"
-             android:layout_height="0dp"
-             android:background= "#D5D5D5" />
+             android:layout_height="wrap_content"
+             android:background= "#D5D5D5"
+             />
 
          <fragment
-             android:name="com.f2016.dtu.androidventeliste.VenteTidFragment"
+             android:name="com.f2016.dtu.androidventeliste.QueueAnimationFragment"
              android:id="@+id/graphic"
              android:layout_weight="3"
              android:layout_width="match_parent"
@@ -34,7 +35,7 @@
              android:background= "#D5D5D5"/>
 
          <fragment
-             android:name="com.f2016.dtu.androidventeliste.VenteTidFragment"
+             android:name="com.f2016.dtu.androidventeliste.InfoBoxFragment"
              android:id="@+id/triangering"
              android:layout_weight="1"
              android:layout_width="match_parent"
