--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,10 @@
         android:layout_height="match_parent">
     </android.support.design.widget.CoordinatorLayout>
 
-
+    <com.flipboard.bottomsheet.BottomSheetLayout
+        android:id="@+id/bottomsheet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
      <LinearLayout
          android:orientation="vertical"
@@ -29,21 +32,13 @@
          <fragment
              android:name="com.f2016.dtu.androidventeliste.QueueAnimationFragment"
              android:id="@+id/graphic"
-             android:layout_weight="3"
              android:layout_width="match_parent"
-             android:layout_height="0dp"
-             android:background= "#D5D5D5"/>
-
-         <fragment
-             android:name="com.f2016.dtu.androidventeliste.InfoBoxFragment"
-             android:id="@+id/triangering"
-             android:layout_weight="1"
-             android:layout_width="match_parent"
-             android:layout_height="0dp"
+             android:layout_height="match_parent"
              android:background= "#D5D5D5"/>
 
      </LinearLayout>
 
+    </com.flipboard.bottomsheet.BottomSheetLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
