--- a/app/src/main/res/layout/fragment_queue_animation.xml
+++ b/app/src/main/res/layout/fragment_queue_animation.xml
@@ -1,7 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background= "#000055">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".AnimationQueueFragment"
+android:background="#ffffff">
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView1"
+        android:src="@drawable/rodmand"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@+id/imageView2" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:src="@drawable/gulmand"
+        android:layout_alignTop="@+id/imageView1"
+        android:layout_alignParentEnd="true" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView3"
+        android:src="@drawable/gronmand"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/imageView2" />
+
+
+</RelativeLayout>
