--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,6 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:icon="@drawable/refresh"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:title="Test" />
 </menu>
