--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,24 +12,13 @@
         android:layout_height="match_parent">
     </android.support.design.widget.CoordinatorLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/outer"
+       >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/top">
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/top_fragment"
-        android:name="com.f2016.dtu.androidventeliste.TopQueueFragment"
-        tools:layout="@layout/fragment_queue_top"
-        android:layout_marginBottom="580dp" />
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main">
+
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -37,26 +26,28 @@
         android:id="@+id/main_fragment"
         android:name="com.f2016.dtu.androidventeliste.AnimationQueueFragment"
         tools:layout="@layout/fragment_queue_animation"
-        android:layout_marginBottom="80dp"
-        android:layout_marginTop="80dp" />
-        </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/bot">
+        android:layout_above="@+id/buttom_fragment" />
+
+        <fragment
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/top_fragment"
+            android:name="com.f2016.dtu.androidventeliste.TopQueueFragment"
+            tools:layout="@layout/fragment_queue_top"
+            android:layout_marginBottom="580dp" />
+
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/buttom_fragment"
         android:name="com.f2016.dtu.androidventeliste.BotQueueFragment"
         tools:layout="@layout/fragment_queue_bot"
-        android:layout_marginTop="580dp"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-    </RelativeLayout>
-
+</RelativeLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
