--- a/app/src/main/res/layout/fragment_queue_animation.xml
+++ b/app/src/main/res/layout/fragment_queue_animation.xml
@@ -7,26 +7,194 @@ tools:context=".AnimationQueueFragment"
 android:background="#ffffff">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:id="@+id/imageView1"
         android:src="@drawable/rodmand"
         android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/imageView2" />
+        android:layout_centerHorizontal="true" />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:id="@+id/imageView2"
         android:src="@drawable/gulmand"
         android:layout_alignTop="@+id/imageView1"
-        android:layout_alignParentEnd="true" />
+        android:layout_toStartOf="@+id/imageView1" />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:id="@+id/imageView3"
         android:src="@drawable/gronmand"
-        android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/imageView2" />
+        android:layout_alignTop="@+id/imageView1"
+        android:layout_toEndOf="@+id/imageView1" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/rodmand"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/imageView3" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView4"
+        android:src="@drawable/gulmand"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_toEndOf="@+id/imageView" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView5"
+        android:src="@drawable/gronmand"
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_toStartOf="@+id/imageView2" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView6"
+        android:src="@drawable/rodmand"
+        android:layout_above="@+id/imageView1"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView7"
+        android:src="@drawable/gulmand"
+        android:layout_above="@+id/imageView3"
+        android:layout_alignStart="@+id/imageView3" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView8"
+        android:src="@drawable/gronmand"
+        android:layout_alignTop="@+id/imageView6"
+        android:layout_toEndOf="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView9"
+        android:src="@drawable/rodmand"
+        android:layout_above="@+id/imageView"
+        android:layout_toStartOf="@+id/imageView4" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView10"
+        android:src="@drawable/gulmand"
+        android:layout_above="@+id/imageView5"
+        android:layout_alignStart="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView11"
+        android:src="@drawable/gronmand"
+        android:layout_above="@+id/imageView4"
+        android:layout_alignStart="@+id/imageView4" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView12"
+        android:src="@drawable/rodmand"
+        android:layout_below="@+id/imageView1"
+        android:layout_alignStart="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView13"
+        android:src="@drawable/gulmand"
+        android:layout_below="@+id/imageView1"
+        android:layout_toEndOf="@+id/imageView23" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView14"
+        android:src="@drawable/gronmand"
+        android:layout_below="@+id/imageView3"
+        android:layout_alignStart="@+id/imageView3" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView15"
+        android:src="@drawable/rodmand"
+        android:layout_below="@+id/imageView3"
+        android:layout_toEndOf="@+id/imageView14" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView16"
+        android:src="@drawable/gulmand"
+        android:layout_below="@+id/imageView4"
+        android:layout_alignStart="@+id/imageView4" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView17"
+        android:src="@drawable/gronmand"
+        android:layout_alignTop="@+id/imageView10"
+        android:layout_toStartOf="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView18"
+        android:src="@drawable/rodmand"
+        android:layout_below="@+id/imageView17"
+        android:layout_alignLeft="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView19"
+        android:src="@drawable/gulmand"
+        android:layout_below="@+id/imageView18"
+        android:layout_alignLeft="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView20"
+        android:src="@drawable/gronmand"
+        android:layout_below="@+id/imageView17"
+        android:layout_alignStart="@+id/imageView17" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView21"
+        android:src="@drawable/rodmand"
+        android:layout_below="@+id/imageView20"
+        android:layout_alignLeft="@+id/imageView5" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView22"
+        android:src="@drawable/gulmand"
+        android:layout_below="@+id/imageView20"
+        android:layout_alignStart="@+id/imageView20" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView23"
+        android:src="@drawable/gronmand"
+        android:layout_below="@+id/imageView1"
+        android:layout_toEndOf="@+id/imageView5" />
 
 
 </RelativeLayout>
