--- a/app/src/main/res/layout/fragment_queue_top.xml
+++ b/app/src/main/res/layout/fragment_queue_top.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".TopQueueFragment"
     android:background="#029de8">
 
@@ -10,12 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Du er nr."
+        android:text="Du er nr. "
         android:id="@+id/YouAreNoText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="90dp" />
+        android:layout_marginLeft="90dp"
+        android:layout_alignTop="@+id/NoInQueueField"
+        android:layout_toStartOf="@+id/NoInQueueField" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,16 +24,16 @@
         android:id="@+id/NoInQueueField"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="i køen"
+        android:text=" i køen"
         android:id="@+id/inQueueText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="110dp" />
+        android:layout_marginRight="110dp"
+        android:layout_alignTop="@+id/NoInQueueField"
+        android:layout_toEndOf="@+id/NoInQueueField" />
 </RelativeLayout>
