--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,36 +12,43 @@
         android:layout_height="match_parent">
     </android.support.design.widget.CoordinatorLayout>
 
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/top"
-        android:orientation="vertical">
+        android:id="@+id/outer"
+
+       >
+
+
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:id="@+id/top_fragment"
-        android:name="com.f2016.dtu.androidventeliste.TopQueueFragment"
-        tools:layout="@layout/fragment_queue_top" />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:id="@+id/main"
-        android:layout_weight="1">
-        </FrameLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/main_fragment"
+        android:name="com.f2016.dtu.androidventeliste.AnimationQueueFragment"
+        tools:layout="@layout/fragment_queue_animation"
+        android:layout_above="@+id/buttom_fragment" />
+
+        <fragment
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/top_fragment"
+            android:name="com.f2016.dtu.androidventeliste.TopQueueFragment"
+            tools:layout="@layout/fragment_queue_top"
+            android:layout_marginBottom="580dp" />
+
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:id="@+id/buttom_fragment"
         android:name="com.f2016.dtu.androidventeliste.BotQueueFragment"
         tools:layout="@layout/fragment_queue_bot"
- />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
-    </LinearLayout>
-
+</RelativeLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
