--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,10 @@
         android:id="@+id/main_fragment"
         android:name="com.f2016.dtu.androidventeliste.AnimationQueueFragment"
         tools:layout="@layout/fragment_queue_animation"
-        android:layout_above="@+id/buttom_fragment" />
+        android:layout_above="@+id/buttom_fragment"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="50dp"
+        />
 
         <fragment
             xmlns:android="http://schemas.android.com/apk/res/android"
