--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,46 +12,44 @@
         android:layout_height="match_parent">
     </android.support.design.widget.CoordinatorLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/outer"
-
+        android:orientation="vertical"
+        android:weightSum="10"
+        android:id="@+id/top"
        >
-
-
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_fragment"
-        android:name="com.f2016.dtu.androidventeliste.AnimationQueueFragment"
-        tools:layout="@layout/fragment_queue_animation"
-        android:layout_above="@+id/buttom_fragment"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="50dp"
-        />
-
         <fragment
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
             android:id="@+id/top_fragment"
             android:name="com.f2016.dtu.androidventeliste.TopQueueFragment"
             tools:layout="@layout/fragment_queue_top"
-         />
+            />
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:id="@+id/main_fragment"
+        android:name="com.f2016.dtu.androidventeliste.AnimationQueueFragment"
+        android:layout_weight="8">
+    </fragment>
+
 
     <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="1"
         android:id="@+id/buttom_fragment"
         android:name="com.f2016.dtu.androidventeliste.BotQueueFragment"
         tools:layout="@layout/fragment_queue_bot"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+</LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
