--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="0px"
             android:layout_weight="1"
             android:id="@+id/top_fragment"
-            android:name="com.f2016.dtu.androidventeliste.TopQueueFragment"
+            android:name="com.f2016.dtu.androidventeliste.Fragments.TopQueueFragment"
             tools:layout="@layout/fragment_queue_top"
             />
 
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:id="@+id/main_fragment"
-        android:name="com.f2016.dtu.androidventeliste.AnimationQueueFragment"
+        android:name="com.f2016.dtu.androidventeliste.Fragments.AnimationQueueFragment"
         android:layout_weight="8">
     </fragment>
 
@@ -44,7 +44,7 @@
         android:layout_height="0px"
         android:layout_weight="1"
         android:id="@+id/buttom_fragment"
-        android:name="com.f2016.dtu.androidventeliste.BotQueueFragment"
+        android:name="com.f2016.dtu.androidventeliste.Fragments.BotQueueFragment"
         tools:layout="@layout/fragment_queue_bot"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
