--- a/app/src/main/res/layout/fragment_queue_animation.xml
+++ b/app/src/main/res/layout/fragment_queue_animation.xml
@@ -3,7 +3,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".AnimationQueueFragment"
+tools:context=".Fragments.AnimationQueueFragment"
 android:background="#ffffff">
 
     <ImageView
