--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -16,7 +16,7 @@
             <item
                 android:id="@+id/navigation_item_3"
                 android:icon="@drawable/ic_launcher"
-                android:title="DrawQueueTest" />
+                android:title="@string/navigation_view_item_3" />
         </menu>
     </item>
 </menu>
