--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.bigmac.slidingmenu.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/findme"
         android:orderInCategory="100"
         app:showAsAction="always"
-        android:title="" />
+        android:title="Find mig" />
+
 </menu>
