--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -17,6 +17,11 @@
                 android:id="@+id/navigation_item_3"
                 android:icon="@drawable/ic_launcher"
                 android:title="@string/navigation_view_item_3" />
+
+            <item
+                android:id="@+id/navigation_item_4"
+                android:icon="@drawable/ic_launcher"
+                android:title="@string/navigation_view_item_4" />
         </menu>
     </item>
 </menu>
