Data forbindelse opsat + opdatering af data

--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -25,8 +25,13 @@
 
             <item
                 android:id="@+id/navigation_item_5"
-                android:icon="@drawable/ic_info_outline"
+                android:icon="@drawable/ic_play_circle_outline"
                 android:title="@string/navigation_view_item_5" />
+
+            <item
+                android:id="@+id/navigation_item_6"
+                android:icon="@drawable/ic_info_outline"
+                android:title="@string/navigation_view_item_6" />
         </menu>
     </item>
 </menu>
