--- a/app/src/main/res/layout/fragment_queue_animation.xml
+++ b/app/src/main/res/layout/fragment_queue_animation.xml
@@ -7,70 +7,11 @@ tools:context=".Fragments.AnimationQueueFragment"
 android:background="#ffffff">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="match_parent"
         android:id="@+id/queueLayout"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView3"
-        android:src="@drawable/gronmand"
-         />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/rodmand"
-         />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView4"
-        android:src="@drawable/gulmand"
-         />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView5"
-        android:src="@drawable/gronmand"
-        />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView6"
-        android:src="@drawable/rodmand"
-        />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView7"
-        android:src="@drawable/gulmand"
-         />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView8"
-        android:src="@drawable/gronmand"
-         />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:id="@+id/imageView9"
-        android:src="@drawable/rodmand"
-       />
-
-
+        android:weightSum="10">
     </LinearLayout>
 
 </RelativeLayout>
