--- a/app/src/main/res/layout/fragment_queue_animation.xml
+++ b/app/src/main/res/layout/fragment_queue_animation.xml
@@ -11,7 +11,8 @@ android:background="#ffffff">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/queueLayout"
-        android:weightSum="10">
+        android:weightSum="10"
+        >
     </LinearLayout>
 
 </RelativeLayout>
